--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,7 +17,7 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: gkehandson
+  project: "gkehandson"
   credentials:
     type: "service_account"
     project_id: <%= ENV['GCS_PROJECT_ID'] %>
@@ -29,7 +29,7 @@ google:
     token_uri: "https://oauth2.googleapis.com/token"
     auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
     client_x509_cert_url: <%= ENV['GCS_CLIENT_X509_CERT_URL'] %>
-  bucket: rails-tutorial
+  bucket: "rails-tutorial"
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
