--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,19 +17,19 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: "gkehandson"
+  project: gkehandson
   credentials:
-    type: "service_account"
+    type: service_account
     project_id: <%= ENV['GCS_PROJECT_ID'] %>
     private_key_id: <%= ENV['GCS_PRIVATE_KEY_ID'] %>
     private_key: <%= ENV['GCS_PRIVATE_KEY'] %>
     client_email: <%= ENV['GCS_CLIENT_EMAIL'] %>
     client_id: <%= ENV['GCS_CLIENT_ID'] %>
-    auth_uri: "https://accounts.google.com/o/oauth2/auth"
-    token_uri: "https://oauth2.googleapis.com/token"
-    auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
+    auth_uri: https://accounts.google.com/o/oauth2/auth
+    token_uri: https://oauth2.googleapis.com/token
+    auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
     client_x509_cert_url: <%= ENV['GCS_CLIENT_X509_CERT_URL'] %>
-  bucket: "rails-tutorial"
+  bucket: rails-tutorial
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
